--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,8 @@ classifiers = [
 dependencies = [
     "pyyaml>=6.0",
     "click>=8.0",
+    "sounddevice>=0.4",
+    "numpy>=1.24",
 ]
 
 [project.scripts]
