--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,9 @@ dependencies = [
     "pynput>=1.7",
 ]
 
+# Note: GTK/PyGObject is a system dependency
+# Install with: sudo apt install python3-gi python3-gi-cairo gir1.2-gtk-3.0
+
 [project.scripts]
 lisn = "lisn.cli:main"
 
