--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,8 @@ dependencies = [
     "groq>=0.11",
     "openai>=1.0",
     "evdev>=1.6",
+    "pyperclip>=1.8.0",
+    "pynput>=1.7.0",
 ]
 
 # Note: GTK/PyGObject is a system dependency
